# multilingual-deception-bench

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  pyproject.toml  run_adversarial_poc.py
data/: README.md  schema.json
data/samples/: starter_samples.jsonl
data/seeds/: en-us-seeds.json  pt-br-seeds.json
docs/: adding-models.md  api-reference.md  contributing.md  data-sources-pt-br.md  dataset-schema.md  ethical-framework.md  evaluation-guide.md  getting-started.md  interpreting-results.md  metrics-explained.md  research-findings.md
reports/: adversarial_poc_20251214_123349.md  all-models-comparison.html  comparison.html  comparison_llm_classifier_2025-12-14.md  full_comparison_2025-12-14.md  pt-br-comparison.html
reports/history/: INDEX.md
reports/history/2025-12-14/: README.md  claude-sonnet-4-20250514_20251214_065007.json  evaluation_report.json
reports/history/2025-12-14-en-us/: README.md
results/: .gitkeep  adversarial_poc_20251214_123349.json  claude-haiku-4-5-20251001_20251214_063146.json  claude-haiku-4-5-20251001_20251214_063214.json  claude_haiku_4_5_en_us.json  claude_haiku_en_us_CORRECTED.json  claude_haiku_en_us_llm.json  claude_haiku_en_us_llm_classifier.json  claude_haiku_pt_br_CORRECTED.json  claude_haiku_pt_br_llm.json  claude_opus_4_5.json  claude_sonnet_4.json  claude_sonnet_4_5.json  claude_sonnet_4_en_us.json  claude_sonnet_4_full.json  claude_sonnet_en_us_llm.json  claude_sonnet_pt_br_llm.json  gemini-2.0-flash-exp_20251214_072959.json  gemini3pro_en_us_llm.json  gemini3pro_pt_br_llm.json  gemini_2_flash_full.json  gemini_3_pro_preview.json  gpt-4o_20251214_071827.json  gpt4o_en_us_llm.json  gpt4o_pt_br_llm.json  gpt51_en_us_llm.json  gpt51_pt_br_llm.json  gpt52_en_us_llm.json  gpt52_pt_br_llm.json  gpt_4o_en_us.json  gpt_4o_en_us_CORRECTED.json  gpt_4o_full.json  gpt_4o_pt_br_CORRECTED.json  gpt_5_1.json  gpt_5_2.json  grok_4_latest.json
src/mdb/: __init__.py  cli.py
src/mdb/evaluators/: __init__.py  adversarial_evaluator.py  llm_classifier.py  metrics.py
src/mdb/evaluators/adapters/: __init__.py  anthropic_adapter.py  base_adapter.py  google_adapter.py  openai_adapter.py  xai_adapter.py
src/mdb/generators/: __init__.py  adversarial_generator.py  redaction.py  seed_based_generator.py  synthetic_generator.py
src/mdb/schema/: __init__.py  attack_schema.py  safety_schema.py
src/mdb/utils/: __init__.py
tests/: __init__.py  test_adapters.py  test_metrics.py  test_redaction.py  test_schema.py
web/: next.config.js  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/ethics/: page.tsx
web/app/leaderboard/: page.tsx
web/app/methodology/: page.tsx
web/components/: LeaderboardTable.tsx  Navigation.tsx
